# rename-images

./: README.md  pyproject.toml  rename_images.py
rename_images/: __init__.py  rename_images.py
tests/: test_rename_images.py
tests/images/heic/: example.heic  sample1.heic
